--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Ignore single file
-new-file.txt
+another-file.txt
 
 # Ignore all file in the bin directory
 bin/
+
+# Ignore all .tmp file
+*.tmp
